# email-html-extractor-demo

./: .gitignore  README.md  pyproject.toml
samples/: sample_email_1.html  sample_email_2.html
src/email_extractor/: __init__.py  cli.py  extractor.py  utils.py
src/email_html_extractor_poc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_cli_smoke.py  test_extractor_links.py  test_extractor_pixels.py
